CR-2004-08-05-1: Bugfix:    killed slave task on tight integration does 
                            not cleanup job correctly (part 1)
                 Issue:     1197
                 Bugtraq:   5082660
                 Changed:   execd
                 Review:    AH

SG-2004-08-04-1: Bugfix:    fixed an aspect of bug 1195: the error message
                            truncated to 100 characters.
                 Review:    RH
                 Issue:     -NA-
                 Bugtraq:   -NA-
                 Changed:   qsub

SG-2004-08-04-0: Bugfix:    qstat -ext -urg did not display the submit/start
                            time
                 Review:    RH
                 Issue:     1192
                 Bugtraq:   5082490
                 Changed:   qstat

SG-2004-08-03-2: Bugfix:    fixed qsat -g c output and qmon to show cqload
                            instead of load. The man page for qstat was
                            changed as well.
                 Review:    AA
                 Changed:   qstat, qmon, qstat.1
                 Issue:     1181, 1190
                 Bugtraq:   -NA-

SG-2004-08-03-1: Bugfix:    fixed qconf -ahgrp to work with a given
                            name. It will generate a templet, that
                            has to be modifed by the user.
                 Issue:     1186
                 Bugtraq:   5081839
                 Changed:   qconf, qmaster
                 Review:    DT

EB-2004-08-02-0: Bugfix:    Deleting a queue instance slots value actually
                            adds it
                 Issue:     1175
                 Bugtraq:   5081822
                 Changed:   qmaster
                 Review:    SG

SG-2004-08-03-0: Bugfix:    fixed a bug in the xml-otuput
                 Issue:     1191
                 Bugtraq:   5081821
                 Changed:   qstat
                 Review:    EB

SG-2004-07-30-1: Bugfix:    qconf -de did not check if the host ist still in use.