@@ -1,3 +1,9 @@
+AA-2004-08-05-0: Bugfix:    tight integration doesn't work with CSP
+                 Issue:     1080
+                 Bugtraq:   5063314
+                 Changed:   all
+                 Review:    CR
+
 CR-2004-08-05-1: Bugfix:    killed slave task on tight integration does 
                             not cleanup job correctly (part 1)
                  Issue:     1197
